[package]
name = "ruinacounter2"
version = "0.1.0"
edition = "2024"

[dependencies]
twitch_api = { version = "0.7", features = ["client", "eventsub", "helix", "reqwest"] }
anyhow = "1.0"
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
